# clad

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .readthedocs.yaml  .travis.yml  404.md  AutoDiff.cpp  CMakeLists.txt  CMakeListsuptu.txt  CNAME  CONTRIBUTING.md  Compatibility.cmake  Copyright.txt  Credits.txt  Gemfile  LastKnownGoodClangRevision.txt  LastKnownGoodLLVMRevision.txt  Makefile  README.md  README.txt  VERSION  _config.yml  build.sh  cmake-variants.json  environment.yml  requirements.txt  shell.nix  test.cpp  test_exe  valgrind.supp
benchmark/: .clang-tidy  ActivityWaste.cpp  AlgorithmicComplexity.cpp  ArrayExpressionTemplates.cpp  BenchmarkedFunctions.h  CMakeLists.txt  EnzymeCladComparison.cpp  GPT2Training.cpp  Hessians.cpp  LULESH_diff.patch  LatestTapeBM.cpp  Matrix.cpp  MemoryComplexity.cpp  Multithreading.cpp  OldTape.h  OldTapeBM.cpp  Simple.cpp  StackTape.h  StackTapeBM.cpp  VectorModeComparison.cpp  VectorTape.h  VectorTapeBM.cpp  XSBench_diff.patch  benchmark_compare.py
demos/PytorchComparison/: CMakeLists.txt  clad-basic-nn.cpp  torch-basic-nn.cpp  torch-basic-nn.py
docs/: CMakeLists.txt  DiagnosticGroups.md  Makefile  ReleaseNotes.md  doxygen.cfg.in  doxygen.footer  doxygen.header  doxygen.intro
docs/internalDocs/: CMakeLists.txt  ReleaseNotes.md  clad_complete_architecture_book.md  clad_complete_architecture_book_pdf.md  clad_complete_architecture_execution.md  clad_derivative_request_workflow.md  clad_forward_mode_detailed_workflow.md  clad_hessian_detailed_workflow.md  clad_jacobian_detailed_workflow.md  clad_reverse_mode_detailed_workflow.md  doxygen.cfg.in  doxygen.footer
docs/sphinx/: conf.py  index.rst
docs/userDocs/: CMakeLists.txt
kokkos/: CMakeLists.txt  functor_for.hpp  lambda_reduction.hpp  lambda_reduction_subview.hpp  main.cpp  parallel_sum.hpp  postProcess.py
lib/Differentiator/: ASTHelper.cpp  ASTIntegrity.cpp  ASTIntegrity.h  ActivityAnalyzer.cpp  ActivityAnalyzer.h  AnalysisBase.cpp  AnalysisBase.h  BaseForwardModeVisitor.cpp  BaseForwardModeVisitorOpenMP.cpp  CMakeLists.txt  CladDiagnostics.cpp  CladUtils.cpp  ConstantFolder.cpp  ConstantFolder.h  DependencySparsityAnalyzer.cpp  DependencySparsityAnalyzer.h  DerivativeBuilder.cpp  DerivedFnCollector.cpp  DerivedFnInfo.cpp  DerivedTypeEssentials.cpp  DerivedTypeInitialiser.cpp  DerivedTypesHandler.cpp  DiffPlanner.cpp  Differentiator.cpp  ErrorEstimator.cpp  EstimationModel.cpp  ForwardModeVisitor.cpp  HessianModeVisitor.cpp  JacobianModeVisitor.cpp  JacobianModeVisitor.h  JacobianVectorProduct.cpp  Makefile  MultiplexExternalRMVSource.cpp  PushForwardModeVisitor.cpp  ReverseModeForwPassVisitor.cpp  ReverseModeVisitor.cpp  ReverseModeVisitorCUDA.cpp  ReverseModeVisitorOpenMP.cpp  StmtClone.cpp  TBRAnalyzer.cpp  (+9 more)
test/: CMakeLists.txt  Functors.out  Issue-1108.cpp  Makefile  PrintOverloads.h  TestUtils.h  clad-valgrind-llvm22.supp  lit.cfg  lit.site.cfg.in
test/Analyses/: ActivityReverse.cpp  DotProductIdentity.cpp  TBR.cpp  UsefulForward.cpp  UsefulNonTermination.cpp
test/Arrays/: ArrayErrorsForwardMode.C  ArrayErrorsReverseMode.C  ArrayExecuteTest.cpp  ArrayInputsForwardMode.C  ArrayInputsForwardMode.CC  ArrayInputsReverseMode.C  ArrayInputsVectorForwardMode.C  Arrays.C
test/CUDA/: ForwardMode.cu  GradientCuda.cu  GradientCuda.cuC  GradientKernels.cu  RestoreTrackerDevice.cu  RunCudaDemos.C  SharedMem.cu  ThrustAdjacentDifference.cu  ThrustCopy.cu  ThrustReduce.cu  ThrustReduceByKey.cu  ThrustScan.cu  ThrustScanByKey.cu  ThrustSortByKey.cu  ThrustTransform.cu  ThrustTransformReduce.cu  ZeroInitDevice.cu  tensor_demo.cu
test/Diagnostics/: ArrayExecuteSafety.cpp  CustomDerivativeDiagnostics.C  DiagnosticGroups.C  LoopCheckpointing.C  PreprocessorErrors.C
test/Differentiator/: EllipticTest.cpp
test/Enzyme/: DifferentCladEnzymeDerivatives.C  ForwardMode.C  FunctionPrototypesReverseMode.C  GradientsComparisonWithClad.C  LoopsReverseModeComparisonWithClad.C  ReverseMode.C  ReverseModeWithCladCheck.C
test/ErrorEstimation/: Assignments.C  BasicOps.C  ConditonalStatements.C  ConditonalStatements.CC  Diagnostics.C  LoopsAndArrays.C  LoopsAndArraysExec.C  PrintErrors.C  RunEstDemos.C
test/ExecOnly/: TestExecOnly.C  lit.local.cfg
test/Features/: DiffInterfaceExec.C  Tape-RamDisk.cpp  stl-cmath.cpp
test/FirstDerivative/: Assignments.C  BasicArithmeticAddSub.C  BasicArithmeticAll.C  BasicArithmeticMulDiv.C  BuiltinDerivatives.C  CallArguments.C  ClassMethodCall.C  CodeGenSimple.C  CompoundAssignments.C  CompoundAssignments.CC  DependencyTracking.C  DependencyTracking.CC  DiffInterface.C  FunctionCalls.C  FunctionCalls.CC  FunctionCallsWithResults.C  FunctionsInNamespaces.C  FunctionsInNamespaces.CC  FunctionsOneVariable.C  Loops.C  Namespaces.C  NonContinuous.C  NonContinuous.CC  Overloads.C  PushforwardInterface.C  Recursive.C  Recursive.CC  Simple.C  Simple.CC  StructGlobalObjects.C  StructMethodCall.C  StructMethodCall.CC  Switch.C  SwitchErrors.C  SwitchInit.C  SwitchInit.CC  SynthesizeLiteralTypes.C  TemplateFunction.C  TemplateSpecialization.C  UnsupportedDecls.C  (+5 more)
test/ForwardMode/: Casts.C  CompEllint1.C  Concurrency.C  ConstevalTest.C  ConstexprTest.C  Enzyme.C  FunctorErrors.C  Functors.C  Functors.CC  Lambdas.C  MemberFunctions.C  MemberFunctions.CC  NonActiveCallBase.cpp  NonDifferentiable.C  NonDifferentiableError.C  NotEnoughArgError.C  OpenMP.C  Pointer.C  Pointers.C  ReferenceArguments.C  STLCustomDerivatives.C  ScalarWrtUserDefined.C  SourceFnArg.C  StructReference.C  TemplateFunctors.C  UserDefinedTypes.C  VariadicCall.C  VectorMode.C  VectorModeInterface.C  VoidPushforward.C  constexprTest.C  std_thread_basic.C
test/Functors/: Errors.C  Simple.C  Simple.CC
test/Gradient/: Assignments.C  Cladtorch.C  ConditionalOperatorCondition.C  Constructors.C  DiffInterface.C  DiffInterface.CC  EarlyReturns.C  Enzyme.C  FunctionCalls.C  Functors.C  Loops.C  (+33 more)
tools/: CMakeLists.txt  ClangBackendPlugin.cpp  ClangBackendPlugin.h  ClangPlugin.cpp  ClangPlugin.h  DerivedFnInfo.cpp  DerivedFnInfo.h  Makefile  RequiredSymbols.cpp
unittests/: CMakeLists.txt
(+422 files in other folders)
